--- a/Замыкание/3. Сортировать по полю/index.html
+++ b/Замыкание/3. Сортировать по полю/index.html
@@ -20,14 +20,13 @@
     // chai предоставляет большое количество функций. Объявим assert глобально
     let assert = chai.assert;
   </script>
-  <!-- <script src="https://ru.js.cx/test/libs.js"></script> -->
 </head>
 <body>
     <script src="script.js"></script>
-    <script src="test.js"></script>
-    <div id="mocha"></div>
+    <!-- <script src="test.js"></script> -->
+    <!-- <div id="mocha"></div>
     <script>
         mocha.run();
-      </script>
+      </script> -->
 </body>
 </html>
