--- a/36. Async await/2. Перепишите, используя async await/index.html
+++ b/36. Async await/2. Перепишите, используя async await/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+<!--   <body>
     <script src="https://ru.js.cx/test/libs.js"></script>
-    <script src="test.js"></script>
+    <script src="test.js"></script> -->
     <script src="script.js"></script>
   </body>
 </html>
